@@ -1,3 +1,8 @@
+2010-05-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* iconimage.py (IconImage): Fixed a F-Spot icon loading bug
+	  (issue #50).
+
 2010-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* preferences.py (Preferences.start): Set default value for
